--- a/_sass/3-layout/team.scss
+++ b/_sass/3-layout/team.scss
@@ -19,6 +19,7 @@
   &__secondary {
     font-size: 1.6rem;
     width: 55%;
+    margin-bottom: 2rem;
   }
 
   &__link {
@@ -39,6 +40,13 @@
       width: 80%;
     }
   }
+
+  @include respond(m-phone) {
+    &__heading {
+      margin: 4rem 0 1rem 0;
+      padding-top: 7rem;
+    }
+  }
 }
 
 // employee icons //
@@ -50,11 +58,19 @@
   max-width: 120rem;
   margin: 2rem auto;
 
+  @include respond(m-phone) {
+    margin: 8rem auto;
+  }
+
 
   .employees {
     display: flex;
     flex-wrap: wrap;
     margin: 0 1rem;
+
+    @include respond(column) {
+      height: 14rem;
+    }
 
     &:nth-child(2) {
       @media screen and (max-width: 530px) {
@@ -68,7 +84,7 @@
       margin: 0 2rem 3rem 0;
 
       @include respond(mid-phone) {
-        margin-bottom: 0;
+        margin: 0;
       }
     }
 
